--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,15 @@ body {
 
 h2, h3 {
   font-family: 'Bebas Neue', cursive;
+  font-size: 25pt;
   text-align: center;
-  letter-spacing: 18px;
+  letter-spacing: 10px;
+
   
 }
 
 .content1, .content2, .content3 {
-  font-size: 50px;
+  font-size: 40px;
   font-size: clamp(1rem, -3.3644rem + 1.1186vw, 4.5rem);
 
 }
@@ -30,7 +32,7 @@ h2, h3 {
   font-size: 100px;
   color: white;
   letter-spacing: 5px;
-  background-image: url(assets/svg/envelope.svg);
+  background-image: url(/assets/svg/envelope.svg);
   background-size: cover;
   background-size: contain;
   background-position: center;
@@ -84,7 +86,7 @@ a:hover {
   margin: 0;
   padding:150px;
 
-  background-image: url(assets/svg/world.svg);
+  background-image: url(/assets/svg/world.svg);
   background-size: cover;
   background-size: contain;
   background-position: right;
@@ -102,7 +104,7 @@ a:hover {
   margin: 0;
   padding:150px;
 
-  background-image: url(assets/svg/travel-pic.svg);
+  background-image: url(/assets/svg/travel-pic.svg);
   background-size: cover;
   background-size: contain;
   background-position: left;
@@ -121,7 +123,7 @@ a:hover {
   margin: 0;
   padding:150px;
 
-  background-image: url(assets/svg/adventure.svg);
+  background-image: url(/assets/svg/adventure.svg);
   background-size: cover;
   background-size: contain;
   background-position: right;
@@ -142,21 +144,23 @@ a:hover {
   padding: 100px;
 
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 10px;
-  row-gap: 5px;
-  font-size: 24px;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-auto-rows: 500px;
+  grid-auto-flow: dense;
+  
+  font-size: 18px;
 }
 
 
 img {
   max-width: 350px;
+  object-fit: contain;
 }
 
 /* Contacts */
 
 .contact {
-  padding: 10px;
+  padding: 0;
   background-color: forestgreen;
   display: flex;
   justify-content: space-evenly;
@@ -165,18 +169,22 @@ img {
 
 /* Footer */
 footer, .contact {
-  padding:20px;
+  padding:15px;
   background-color: seagreen;
 }
+
 /* Media Query*/
 
 @media screen and (max-width:1410px) {
 
   header{
-    margin-bottom: 30px;
+    margin-bottom: 25px;
   }
   .philosophy {
     margin-top: 40px;
+    padding: 0;
+    
+    
   }
   .philosophy, .about, .why, .how, .content1, .content2, .content3{
     display: flex;
@@ -185,6 +193,7 @@ footer, .contact {
     padding: 50px;
     background-size: 300px;
     font-size: 18px;
+    
   }
 }
 
@@ -221,6 +230,7 @@ footer, .contact {
     justify-content: center;
 
     font-size: 19pt;
+    letter-spacing: none;
   }
 
   .phil {
@@ -229,7 +239,7 @@ footer, .contact {
   }
 
   .content1, .content2, .content3 {
-    letter-spacing: none;
+    letter-spacing: 0;
     font-size: 15pt;
   }
 
