--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap');
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -91,9 +91,8 @@ a:hover {
   background-size: contain;
   background-position: right;
   background-repeat: no-repeat;
-  
-  
 }
+
 .content1, .phil{
   text-align: left;
 }
@@ -145,15 +144,15 @@ a:hover {
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-auto-rows: 500px;
+  grid-auto-rows: 450px;
   grid-auto-flow: dense;
   
   font-size: 18px;
 }
 
-
 img {
   max-width: 350px;
+  max-height: 250px;
   object-fit: contain;
 }
 
@@ -168,9 +167,19 @@ img {
 }
 
 /* Footer */
-footer, .contact {
-  padding:15px;
+footer {
+  margin: auto;
+  padding: 1rem;
   background-color: seagreen;
+}
+
+ul {
+  text-decoration: none;
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+  justify-content: center;
+  flex-flow: row wrap;
 }
 
 /* Media Query*/
@@ -202,8 +211,7 @@ footer, .contact {
     margin-top: 400px;
     font-size: 70px;
   }
-
-.philosophy, .about, .why, .how {
+  .philosophy, .about, .why, .how {
   padding: 50px;
   display: flex;
   flex-direction: column;
@@ -241,9 +249,5 @@ footer, .contact {
   .content1, .content2, .content3 {
     letter-spacing: 0;
     font-size: 15pt;
-  }
-
-  img {
-    max-width: 200px;
   }
 }
